close #39: fixed long movie titles hiding behind rating box

--- a/style/movie.css
+++ b/style/movie.css
@@ -10,7 +10,8 @@
 }
 
 .movie_rating {
-    position: absolute;
+    float: right;
+    margin: 10px;
     top: 10px;
     right: 10px;
     border: 2px solid black;
